Fix of Azure-caused issues
A previous attempt to commit file to Azure caused unexpected errors and damaged a project file within the repository.

This commit acts a fix/override of the following pushes:
• Revert "Update CategoryControllerTests.cs"
• Revert "Update CategoryControllerTests.cs"
• Update CategoryControllerTests.cs
• Update CategoryControllerTests.cs
• Add or update the Azure App Service build and deployment workflow config
• Removed .yml file
• Publish To Azure

--- a/OnlineShop2022/OnlineShop2022.csproj
+++ b/OnlineShop2022/OnlineShop2022.csproj
@@ -31,4 +31,10 @@
     <None Include="wwwroot\js\checkout.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\App.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
