New Selenium Test
• Added New Selenium Test to check Users can successfully register an account
• Changed Driver Source to NuGet package from physical directory
• Added Id to relevant component(s) in OnlineShop application so they can be referenced by Selenium
• Changed content copied to Published Version through Azure

--- a/OnlineShop2022/OnlineShop2022.csproj
+++ b/OnlineShop2022/OnlineShop2022.csproj
@@ -28,7 +28,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\js\checkout.js" />
+    <None Include="wwwroot\js\checkout.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\js\site.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
