API Controller Development
Built Delivery, Order and Product Controllers.

All related Products and Delivery can be displayed with the relevant Order

--- a/OnlineShopDeliveryAPI/appsettings.json
+++ b/OnlineShopDeliveryAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "DataSource=./Data/App.db",
+    "OnlineShop2022ContextConnection": "Data Source=OnlineShopDeliveryAPI.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
