Added Session Tokens, User Authentication and User Model

--- a/OnlineShopDeliveryAPI/appsettings.json
+++ b/OnlineShopDeliveryAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "JwtBearerTokenSettings": {
+    "SecretKey": "p3s6v9y$B&E)H+Mb",
+    "Audience": "https://localhost:44322/",
+    "Issuer": "https://localhost:44322/",
+    "ExpiryTimeInSeconds": 5000
+  },
   "ConnectionStrings": {
     "DefaultConnectionString": "DataSource=./Data/App.db",
     "OnlineShop2022ContextConnection": "Data Source=OnlineShopDeliveryAPI.db"
