--- a/OnlineShopDeliveryAPI/appsettings.json
+++ b/OnlineShopDeliveryAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "JwtBearerTokenSettings": {
-    "SecretKey": "p3s6v9y$B&E)H+Mb",
+    "SecretKey": "b3s6v9y$B&E)H+Mb",
     "Audience": "https://localhost:44322/",
     "Issuer": "https://localhost:44322/",
     "ExpiryTimeInSeconds": 5000
